--- a/Learning/app/src/main/res/values/strings.xml
+++ b/Learning/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Learning</string>
     <string name="happy_birthday_same">Happy birthday Same!</string>
     <string name="signature_text">From Emma</string>
+    <string name="bill_amount">Bill Amount</string>
 </resources>
