--- a/FHIRApplication/app/src/main/res/values/strings.xml
+++ b/FHIRApplication/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="care_plan">Care Plan</string>
     <string name="tasks">Tasks</string>
     <string name="blood_test">Blood test</string>
+    <string name="vaccination_details">Vaccination Details</string>
 </resources>
