--- a/FHIRApplication/app/src/main/res/values/strings.xml
+++ b/FHIRApplication/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="tasks">Tasks</string>
     <string name="blood_test">Blood test</string>
     <string name="vaccination_details">Vaccination Details</string>
+    <string name="data_is_saved">Data is saved</string>
 </resources>
